<resources>
    <string name="app_name">Калькулятор</string>
    <string name="operand1_text">Операнд 1:</string>
    <string name="operand1_hint">Введите операнд 1…</string>
    <string name="operand2_text">Операнд 2:</string>
    <string name="operand2_hint">Введите операнд 2…</string>
    <string name="operator_text">Оператор:</string>
    <string name="result_text">Результат:</string>
    <string name="evaluate_text">Рассчитать</string>
    <string name="about_author_label_text">Об авторе</string>
    <string-array name="operators">
        <item>Сложить</item>
        <item>Вычесть</item>
        <item>Умножить</item>
        <item>Разделить</item>
    </string-array>

    <string name="about_author_text">Меня зовут Илья.\nЭто приложение я сделал в рамках домашнего задания в IT-клубе МЭИ \"Тьюринг\".</string>
    <string name="back_button_text">Назад</string>

    <string name="not_all_operands_error_text">Введены не все операнды!</string>
    <string name="division_by_zero_error_text">Нельзя делить на ноль!</string>
</resources>